; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-tqmx86.c_tqmx86_init_irq_valid_mask.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-tqmx86.c_tqmx86_init_irq_valid_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gpio_chip*, i64*, i32)* @tqmx86_init_irq_valid_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tqmx86_init_irq_valid_mask(%struct.gpio_chip* %0, i64* %1, i32 %2) #0 {
  %4 = alloca %struct.gpio_chip*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  store %struct.gpio_chip* %0, %struct.gpio_chip** %4, align 8
  store i64* %1, i64** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64*, i64** %5, align 8
  %8 = call i32 @clear_bit(i32 0, i64* %7)
  %9 = load i64*, i64** %5, align 8
  %10 = call i32 @clear_bit(i32 1, i64* %9)
  %11 = load i64*, i64** %5, align 8
  %12 = call i32 @clear_bit(i32 2, i64* %11)
  %13 = load i64*, i64** %5, align 8
  %14 = call i32 @clear_bit(i32 3, i64* %13)
  ret void
}

declare dso_local i32 @clear_bit(i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
